# makima

./: .env.example  CLAUDE.md  README.md  SECURITY.md  components.json  package.json  pnpm-lock.yaml  todo.md
desktop/: pnpm-lock.yaml
desktop/src/: styles.css
desktop/src-tauri/: tauri.conf.json
docs/: BUSINESS_MODEL.md  agent-executor.md  architecture.md  getting-started.md  index.md  troubleshooting.md
makima-desktop/: README.md  package.json  pnpm-lock.yaml  vitest.config.ts
makima-desktop/src/: styles.css
makima-desktop/src-tauri/: Cargo.toml  README.md
makima-desktop/src-tauri/src/: filesystem.rs  lib.rs
makima-desktop/src-tauri/src/database/: cli_session.rs  commands.rs  mod.rs  repository.rs  schema.rs  types.rs
makima-desktop/src-tauri/src/git/: commands.rs
makima-desktop/src-tauri/src/openai/: types.rs
makima-desktop/src-tauri/src/openclaw/: client.rs  commands.rs  config.rs  mod.rs  process.rs  types.rs
makima-desktop/src-tauri/src/pty/: commands.rs  detect.rs  mod.rs  state.rs  types.rs
makima-mobile/makima-mobile/: ContentView.swift  Info.plist  Item.swift  makima_mobileApp.swift
makima-mobile/makima-mobile.xcodeproj/: project.pbxproj
makima-mobile/makima-mobileTests/: ComposerPayloadBuilderTests.swift  ConversationGroupingTests.swift  DrawerSnapTests.swift  ThemeStateTests.swift  makima_mobileTests.swift
makima-mobile/makima-mobileUITests/: DrawerNavigationUITests.swift  (+2 more)
screenshots/: README.md
src/: mocks.ts  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
supabase/: config.toml
(+423 files in other folders)
