[package]
name = "Makima"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
dashmap = "5.5"
uuid = { version = "1.8", features = ["v4"] }
window-vibrancy = "0.7.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
portable-pty = "0.8"
base64 = "0.22"
git2 = "0.19"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
